--- a/no/CMakeLists.txt
+++ b/no/CMakeLists.txt
@@ -1,5 +1,12 @@
-add_executable(no main.c)
+add_executable(no main.c no_1.c)
 target_link_libraries(no libno)
+
+find_program(XXD xxd)
+add_custom_command(
+  OUTPUT no_1.c
+  COMMAND ${XXD} -i no.1 ${CMAKE_CURRENT_BINARY_DIR}/no_1.c
+  MAIN_DEPENDENCY no.1
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_custom_target(manpage
   ALL
