move macOS testing to Cirrus
Travis has killed off macOS CI [0].

  [0]: https://blog.travis-ci.com/2020-11-02-travis-ci-new-billing

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,11 +3,17 @@ task:
   # only test the master branch and pull requests
   only_if: $CIRRUS_BRANCH == "master" || $CIRRUS_PR != ""
 
-  install_script: pkg install -y cmake vim
-
-  test_script: uname -sr && mkdir build && cd build && cmake .. && cmake --build . && sudo cmake --build . -- install
-
   matrix:
+
     - name: FreeBSD 13.0
       freebsd_instance:
         image_family: freebsd-13-0-snap
+      install_script: pkg install -y cmake vim
+
+    - name: macOS, XCode 12.1 Clang
+      osx_instance:
+        image: catalina-xcode-12.1
+      environment:
+        CFLAGS: -fsanitize=address -Werror
+
+  test_script: uname -sr && mkdir build && cd build && cmake .. && cmake --build . && sudo cmake --build . -- install
